Update CMake scripts
Updated scripts for code coverage and sanitizer use, and removed the
Catch one as Catch now comes with it's own CMake module scripts.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,19 +1,27 @@
-# Copyright (C) 2022 George Cave.
+# Copyright (C) 2022-2024 George Cave.
 #
 # SPDX-License-Identifier: Apache-2.0
 
-include(prepare_catch.cmake)
 include(code-coverage.cmake)
 include(sanitizers.cmake)
 
-add_code_coverage_all_targets(EXCLUDE ".*/test/.*")
-
-prepare_catch(COMPILED_CATCH)
-
+find_package(Catch2 3 REQUIRED)
 find_package(Vulkan REQUIRED)
 
+set_sanitizer_options(address DEFAULT -fsanitize-address-use-after-scope
+                      -fsanitize-address-use-after-return=runtime)
+set_sanitizer_options(leak DEFAULT)
+set_sanitizer_options(memory DEFAULT -fsanitize-memory-track-origins)
+set_sanitizer_options(undefined DEFAULT -fno-sanitize-recover=undefined)
+
+if(USE_SANITIZER)
+  add_sanitizer_support(${USE_SANITIZER})
+endif()
+
+add_code_coverage_all_targets(EXCLUDE ".*/test/.*")
+
 include_directories(../include)
-link_libraries(catch Vulkan::Vulkan)
+link_libraries(Catch2::Catch2WithMain Vulkan::Vulkan)
 
 # Compilation Test
 add_library(compilation_test STATIC c_compilation.c cpp_compilation.cpp)
