Add support for Vulkan v1.3.301

--- a/data/cleanup_excludes.yaml
+++ b/data/cleanup_excludes.yaml
@@ -1,3 +1,6 @@
 VkAccelerationStructureBuildGeometryInfoKHR:
 VkMicromapBuildInfoEXT:
 VkAccelerationStructureTrianglesOpacityMicromapEXT:
+VkIndirectExecutionSetCreateInfoEXT:
+VkIndirectCommandsLayoutTokenEXT:
+VkIndirectCommandsLayoutCreateInfoEXT:
