--- a/data/compare_excludes.yaml
+++ b/data/compare_excludes.yaml
@@ -18,3 +18,6 @@ VkAccelerationStructureTrianglesOpacityMicromapEXT:
 VkCopyMicromapToMemoryInfoEXT:
 VkCopyMemoryToMicromapInfoEXT:
 VkDescriptorGetInfoEXT:
+VkIndirectCommandsLayoutCreateInfoEXT:
+VkIndirectExecutionSetCreateInfoEXT:
+VkIndirectCommandsLayoutTokenEXT:
