Add Vulkan v1.4.312 support

--- a/data/cleanup_excludes.yaml
+++ b/data/cleanup_excludes.yaml
@@ -4,3 +4,5 @@ VkAccelerationStructureTrianglesOpacityMicromapEXT:
 VkIndirectExecutionSetCreateInfoEXT:
 VkIndirectCommandsLayoutTokenEXT:
 VkIndirectCommandsLayoutCreateInfoEXT:
+VkPhysicalDevicePresentMeteringFeaturesNV:
+VkSetPresentConfigNV:
