--- a/data/compare_excludes.yaml
+++ b/data/compare_excludes.yaml
@@ -21,3 +21,8 @@ VkDescriptorGetInfoEXT:
 VkIndirectCommandsLayoutCreateInfoEXT:
 VkIndirectExecutionSetCreateInfoEXT:
 VkIndirectCommandsLayoutTokenEXT:
+VkClusterAccelerationStructureInputInfoNV:
+VkConvertCooperativeVectorMatrixInfoNV:
+VkAccelerationStructureGeometrySpheresDataNV:
+VkAccelerationStructureGeometryLinearSweptSpheresDataNV:
+VkClusterAccelerationStructureCommandsInfoNV:
