Remove several protected structs cleanup/compare
Several structs are protected behind a beta/provisional flag, and the
current parsing/generation scripts are not setup to handle that.

Until they do, remove certain structs from consideration.

--- a/data/cleanup_excludes.yaml
+++ b/data/cleanup_excludes.yaml
@@ -6,3 +6,11 @@ VkIndirectCommandsLayoutTokenEXT:
 VkIndirectCommandsLayoutCreateInfoEXT:
 VkPhysicalDevicePresentMeteringFeaturesNV:
 VkSetPresentConfigNV:
+VkVideoPictureResourceKHR:
+VkVideoReferenceSlotKHR:
+VkVideoQueueFamilyProperties2KHR:
+VkCudaFunctionCreateInfoNV:
+VkCudaLaunchInfoNV:
+VkCudaModuleCreateInfoNV:
+VkPhysicalDeviceCudaKernelLaunchPropertiesNV:
+VkPhysicalDeviceCudaKernelLaunchFeaturesNV:
