--- a/data/compare_excludes.yaml
+++ b/data/compare_excludes.yaml
@@ -26,3 +26,11 @@ VkConvertCooperativeVectorMatrixInfoNV:
 VkAccelerationStructureGeometrySpheresDataNV:
 VkAccelerationStructureGeometryLinearSweptSpheresDataNV:
 VkClusterAccelerationStructureCommandsInfoNV:
+VkVideoPictureResourceKHR:
+VkVideoReferenceSlotKHR:
+VkVideoQueueFamilyProperties2KHR:
+VkCudaFunctionCreateInfoNV:
+VkCudaLaunchInfoNV:
+VkCudaModuleCreateInfoNV:
+VkPhysicalDeviceCudaKernelLaunchPropertiesNV:
+VkPhysicalDeviceCudaKernelLaunchFeaturesNV:
