Update serialization to better support enums
Vulkan header 337+ has some values which require the use of uint64_t, so
re-work the value arrays to accomodate different value types.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -24,7 +24,7 @@ include_directories(../include)
 link_libraries(Catch2::Catch2WithMain Vulkan::Vulkan)
 
 # Compilation Test
-add_library(compilation_test STATIC c_compilation.c cpp_compilation.cpp)
+add_library(compilation_test STATIC c_compilation.c cpp_compilation.cpp underlying_type_check.cpp)
 
 # Error Code
 add_executable(VkErrorCodeTests error_code.cpp)
